Sat Feb  8 15:41:37 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: Don't set CLOEXEC flag explicitly.  (Ruby set it by
	  default.)

Sat Feb  8 15:27:02 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Message::MessageDecoder): Raise
	  DecodeError if no data before the limit.
	  Reported by Will Bryant.  [ruby-core:60557] [Bug #9498]

Sat Feb  8 15:11:21 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (SMALLBUF): Unused macro removed.

Fri Feb  7 23:37:49 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: Ignore name servers which cause EAFNOSUPPORT on
	  socket creation.
	  Reported by Bjoern Rennhak.  [ruby-core:60442] [Bug #9477]

Fri Feb  7 21:58:48 2014  Zachary Scott  <e@zzak.io>

	* lib/open-uri.rb: [DOC] use lower case version of core classes, same
	  as commit r44878, based on patch by Jonathan Jackson [Bug #9483]

Fri Feb  7 21:54:53 2014  Zachary Scott  <e@zzak.io>

	* ext/ripper/lib/ripper/lexer.rb: [DOC] use lower case version of core
	  classes when referring to return value, since we aren't directly
	  talking about the class. Patch by Jonathan Jackson [Bug #9483]

Fri Feb 7 05:28:38 2014  Eric Wong  <e@80x24.org>

	* constant.h: reduce rb_const_entry_t size on 64-bit
	  Patch by Adam Avilla [ruby-core:60542] [Feature #9496]

Thu Feb  6 15:27:46 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_int): correct warning messages.

	* gc.c (get_envparam_double): ditto.

Thu Feb  6 15:17:30 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_int): don't accept a value equals to lowerbound
	  (changed by last commit) because "" or "foo" (not a number) strings
	  are parsed as 0. They should be rejected.

	* gc.c (get_envparam_double): ditto.

Thu Feb  6 09:00:35 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (ruby_gc_set_params): if RUBY_GC_OLDMALLOC_LIMIT is provided,
	  then set objspace->rgengc.oldmalloc_increase_limit.
	  Without this fix, the env variable RUBY_GC_OLDMALLOC_LIMIT
	  does not work.
